[project]
name = "geocitysorter"
version = "0.9.12"
authors = [
    { name = "Tony Rice", email = "rtphokie+pypi@gmail.com" },
]
description = "geographic relevance sorter for geopandas dataframes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas>=0.14.1",
    "requests>=2.31.0",
    "requests-cache>=1.1.1",
    "geopy>=2.4.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geocitysorter = ["*.csv", '*.json']

[project.urls]
Homepage = "https://github.com/rtphokie/geocitysorter"
Issues = "https://github.com/rtphokie/geocitysorter/issues"

# https://packaging.python.org/en/latest/tutorials/packaging-projects/
